# Multi-Model-Evidence-Review

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SDK_ARCHITECTURE.md  SDK_IMPLEMENTATION_PLAN.md  SDK_MIGRATION_REPORT.md  output.csv  pypi_publishing_guide.md  pyproject.toml  sdk-migration.md
.github/workflows/: publish.yml
code/: .env.example  README.md  config.py  gemini_client.py  image_validator.py  main.py  models.py  output_writer.py  parsers.py  pipeline.py  post_processor.py  prompts.py  requirements.txt  vision_analyzer.py
code/evaluation/: evaluation_report.md  main.py  metrics.py
multimodal_evidence/: __init__.py  cli.py
multimodal_evidence/embeddings/: __init__.py
multimodal_evidence/models/: __init__.py  claim.py
multimodal_evidence/multimodal/: __init__.py  client.py  pipeline.py
multimodal_evidence/ranking/: ranker.py
multimodal_evidence/retrieval/: search.py
multimodal_evidence/utils/: errors.py  image.py
multimodal_evidence/verification/: __init__.py  verifier.py
