[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multimodal-evidence-sdk"
version = "0.1.0"
description = "A Python SDK for verifying, ranking, and reviewing multi-modal damage claims using Gemini vision models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Developer", email = "developer@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.0",
    "Pillow>=10.0",
    "tqdm>=4.0",
    "python-dotenv>=1.0",
]

[project.scripts]
evidence = "multimodal_evidence.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["multimodal_evidence"]
